@@ -1,3 +1,8 @@
+2000-11-15  Jacob "Ulysses" Berkman  <jacob@helixcode.com>
+
+	* gnome-login-check.c (main): change the error message to
+	reference the patch which fixes this.
+
 2000-11-09  Karl Eichwalder  <ke@suse.de>
 
 	* gnome-wm: Fix typo.
